<resources>
    <string name="app_name">BetterMiuiExpress</string>
    <string name="data_source">运单数据由快递 100 提供</string>
    <string name="express_details_mail_number">快递单号: %s</string>
    <string name="empty_tips">授权码和公司编码不能为空</string>
    <string name="save_successfully">保存成功</string>
    <string name="no_credentials">请先填写快递 100 授权码和公司编码</string>
    <string name="unexpected_error">未知错误</string>
    <string name="copyright">MIUI 负一屏快递便捷小工具。用于禁止 MIUI 强制跳转第三方快递应用。\n将快递 100 查询 API 的 customer 和 key 字段填入上方并保存，然后强制结束“智能助理”进程后，启用本模块即可开始使用。\n如需跳转其他应用查看取件码，请通过详情页右上角进入。\n\n本模块在 GPLv3 许可下开放源代码，详情请转到 GitHub 查看。\n\nCopyright © 2021–2022 MoeFactory\nAll Rights Reserved.</string>
    <string name="yuki">此模块使用 YukiHookAPI 构建</string>
    <string name="yuki_version">YukiHookAPI 版本: %1$s (%2$d)</string>
    <string name="inactive">模块未激活</string>
    <string name="inactive_description">请检查是否在 Hook 框架中启用了本模块</string>
    <string name="active">模块已激活</string>
    <string name="active_hook_framework_version">Hook 框架: %1$s (API %2$d)</string>
    <string name="github">GitHub</string>
    <string name="coolapk">酷安</string>
    <string name="blog">博客</string>
    <string name="jump_to_third_party_app">转到第三方应用</string>
    <string name="app_express_detail_list_empty_text">暂无运单信息，或数据同步延迟，请稍后再试\n如有需求，可自行前往相应快递官网查询</string>
    <string name="express_state_transport">运输中</string>
    <string name="express_state_accept">已揽件</string>
    <string name="express_state_failed">疑难件</string>
    <string name="express_state_sign">已签收</string>
    <string name="express_state_reject">已拒签</string>
    <string name="express_state_delivering">派送中</string>
    <string name="express_state_transferred">已转寄</string>
    <string name="express_state_in_customs">清关中</string>
    <string name="express_state_unknown">暂无信息</string>
    <string name="express_details_title">我的快递</string>
    <string name="express_loading">加载中</string>
    <string name="debug_info_copied">成功复制调试信息</string>
    <string name="customer_field_hint">快递 100 公司编码 customer</string>
    <string name="key_field_hint">快递 100 授权码 key</string>
    <string name="save_config">保存</string>
</resources>