<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="0dp"
            app:collapsedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
            app:contentScrim="@color/colorBackground"
            app:expandedTitleMarginBottom="28dp"
            app:expandedTitleMarginStart="72dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mt_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                android:elevation="0dp"
                android:gravity="bottom"
                app:titleTextAppearance="@style/MiuiStyle.ActionBar.Title.Expanded" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_data_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@null"
                android:layout_marginTop="12dp"
                android:thumb="@drawable/switch_thumb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:track="@drawable/switch_track"
                tools:checked="true"
                tools:text="@string/use_kuadi100" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_key"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="@color/miuiTextInputLayoutBackground"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/sw_data_source">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_key"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/key_field_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_customer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="@color/miuiTextInputLayoutBackground"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/til_key">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_customer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/customer_field_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_kuaidi100"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:visibility="visible"
                app:constraint_referenced_ids="til_key,til_customer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/save_config"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_customer" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/btn_save">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_status"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginVertical="12dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_inactive"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/inactive"
                        android:textColor="@color/blackTextColor"
                        app:layout_constraintStart_toEndOf="@id/iv_status"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_status_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/inactive_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tv_status"
                        app:layout_constraintTop_toBottomOf="@id/tv_status" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/mcv_status">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_copyright"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/copyright"
                        android:textColor="@color/receivedTextColor"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_github"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="12dp"
                        android:text="@string/github"
                        android:textColor="@color/miuiSecondaryButtonTextColor"
                        app:backgroundTint="@color/miuiSecondaryButtonBackgroundColor"
                        app:layout_constraintEnd_toStartOf="@id/btn_coolapk"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_copyright" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_coolapk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="12dp"
                        android:text="@string/coolapk"
                        android:textColor="@color/miuiSecondaryButtonTextColor"
                        app:backgroundTint="@color/miuiSecondaryButtonBackgroundColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_github"
                        app:layout_constraintTop_toBottomOf="@id/tv_copyright" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_blog"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="12dp"
                        android:text="@string/blog"
                        android:textColor="@color/miuiSecondaryButtonTextColor"
                        app:backgroundTint="@color/miuiSecondaryButtonBackgroundColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_github" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_yuki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/mcv_about">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_yuki"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginVertical="12dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/yuki"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_yuki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/yuki"
                        android:textColor="@color/blackTextColor"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/iv_yuki"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_yuki_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/yuki_version"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@id/iv_yuki"
                        app:layout_constraintTop_toBottomOf="@id/tv_yuki" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>